--- a/app/views/layout/application.html.haml
+++ b/app/views/layout/application.html.haml
@@ -2,7 +2,7 @@
 %html{ html_attrs("en_us") }
   %head
     %title
-      Fresh Merb App
+      = catch_content(:for_title).blank? ? 'Hartford.rb' : catch_content(:for_title)
     %meta{ :content => "text/html; charset=utf-8", "http-equiv" => "content-type" }/
     %link{ :href => "/stylesheets/master.css", :rel => "stylesheet", :media => "screen", :type => "text/css", :charset => "utf-8" }/
   %body
