--- a/app/views/layout/application.html.haml
+++ b/app/views/layout/application.html.haml
@@ -4,6 +4,23 @@
     %title
       = catch_content(:for_title).blank? ? 'Hartford.rb' : catch_content(:for_title)
     %meta{ :content => "text/html; charset=utf-8", "http-equiv" => "content-type" }/
-    %link{ :href => "/stylesheets/master.css", :rel => "stylesheet", :media => "screen", :type => "text/css", :charset => "utf-8" }/
+    %link{ :href => "/stylesheets/screen.css", :rel => "stylesheet", :media => "screen", :type => "text/css", :charset => "utf-8" }/
   %body
-    = catch_content :for_layout
+    %div#container
+      %div#header
+        %h1
+          %abbr{ :title => 'Hartford Ruby Brigade' }
+            = link_to 'Hartford.rb', '/'
+      %div#content.clearfix
+        = catch_content :for_layout
+      %div#footer.clearfix
+        %ul.menu
+        %a.cc{ :rel => "license", :href => "http://creativecommons.org/licenses/by/3.0/us/" }
+          %img{ :alt => "Creative Commons License", :src => "http://i.creativecommons.org/l/by/3.0/us/88x31.png" }
+        Except where otherwise
+        %a.subfoot{ :href => "/policies#license" } noted, 
+        content on this site is
+        %br
+        licensed under a
+        %a{ :rel => "license", :href => "http://creativecommons.org/licenses/by/3.0/us/" } Creative Commons Attribution 3.0 License
+
