--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -8,53 +8,102 @@
 body {
   font-family:Arial, Verdana, sans-serif;
   font-size:1em;
-	color:#fff;
-  background-color:#7f0200;
+  color:#fff;
+  background-color:#c8000a;
 }
 * {
   margin:0px;
   padding:0px;
   text-decoration:none;
 }
+a {
+  color:#FEFFBC;
+}
 a img {
-	border:0;
+  border:0;
+}
+ul {
+  list-style:none;
 }
 #container {
+  color:#000;
+}
+.container {
+  width:950px;
   margin:0 auto;
-	width:900px;
-	background:#fff;
-	color:#000;
-	border:4px solid #333333;
-	border-top:0;
 }
 #header {
-	background-color:#c8000a;
+  background-color:#7f0200;
+  border-bottom:4px solid #FEFFBC;
+}
+#header img {
+  float:left;
+  margin:15px 5px 0 0;
 }
 #header h1 {
-	line-height:75px;
-	margin:0 10px;
+  float:left;
+  line-height:75px;
+  margin:0;
 }
 #header h1 abbr {
-	border:0;
+  border:0;
 }
 #header h1 a {
-	color:#fff;
-	text-decoration:none;
+  color:#fff;
+  text-decoration:none;
 }
 #content {
-	margin:10px;
-	min-height:250px;
+  margin:20px;
+}
+#body {
+  float:left;
+  padding:25px;
+  width:650px;
+  background:#fff;
+  min-height:450px;
+  margin-right:10px;
+  border-top:4px solid #7f0200;
+}
+#body h2 {
+  color:#FF4E20;
+}
+#body h3 {
+	color:#CC0000;
+	margin:15px 0;
+}
+#body a {
+  color:#c00;
+}
+#sidebar {
+  float:left;
+  width:215px;
+  min-height:280px;
+  background:#FEFFBC;
+  padding:10px;
+  border-top:4px solid #7f0200;
+}
+#sidebar h3 {
+  margin-top:15px;
+  color:#c00;
+}
+#sidebar a {
+  color:#FF4E20;
 }
 #footer {
-	padding:15px 10px 10px 10px;
-	background-color:#f0f0f0;
-	border-bottom:4px solid #c0c0c0;
-	border-top:2px solid #a0a0a0;
-	font-size:0.80em;
+  color:#fff;
+  font-size:0.80em;
 }
 #footer a.cc {
-	float:left;
+  float:left;
 }
 #footer a.cc img {
-	margin-right:5px;
+  margin-right:5px;
+}
+.tweet {
+  margin:5px 0;
+  font-size:0.75em;
+}
+.tweet img {
+  padding:0 5px;
+  float:left;
 }
